k8s-files/ecommerce-k8s/ecommerce-admin.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-admin
  namespace: ecommerce
  labels:
    app: ecommerce-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-admin
  template:
    metadata:
      labels:
        app: ecommerce-admin
    spec:
      containers:
        - name: ecommerce-admin
          image: acrk8sprojectecommerce.azurecr.io/ecommerce-admin:33
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: secrets-store-inline
              mountPath: /mnt/secrets-store
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"

---

apiVersion: v1
kind: Service
metadata:
  name: ecommerce-admin
  namespace: ecommerce
spec:
  selector:
    app: ecommerce-admin
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
