k8s-files/ecommerce-k8s/ecommerce-store.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-store
  namespace: ecommerce
  labels:
    app: ecommerce-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-store
  template:
    metadata:
      labels:
        app: ecommerce-store
    spec:
      containers:
        - name: ecommerce-store
          image: acrk8sprojectecommerce.azurecr.io/ecommerce-store:34
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: secrets-store-inline-store
              mountPath: /mnt/secrets-store/store
              readOnly: true
      volumes:
        - name: secrets-store-inline-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"

---

apiVersion: v1
kind: Service
metadata:
  name: ecommerce-store
  namespace: ecommerce
spec:
  selector:
    app: ecommerce-store
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  type: ClusterIP
